[GStreamer][WebRTC] Increase spec compliance for ICE candidate stats https://bugs.webkit.org/show_bug.cgi?id=290451

Reviewed by Xabier Rodriguez-Calvar.

Implement the new ICETransport->get_selected_candidate_pair vfunc in the Rice backend and fill
ICE candidate stats from GStreamer ICE candidate stats. This will allow us to unflag several layout
tests once the SDK is updated to GStreamer 1.28.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransport.cpp:
(populateCandidateStats):
(fillCredentials):
(riceCandidateToGst):
(webkitGstWebRTCIceTransportGetSelectedCandidatePair):
(webkit_gst_webrtc_ice_transport_class_init):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceTransportBackend.cpp:
(WebCore::candidateFromGstWebRTC):
(WebCore::GStreamerIceTransportBackend::selectedCandidatePairChanged):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::RTCStatsReport::IceCandidateStats::IceCandidateStats):
(WebCore::iceCandidateType): Deleted.
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::toRTCIceComponent): Deleted.
(WebCore::toRTCIceProtocol): Deleted.
(WebCore::toRTCIceTcpCandidateType): Deleted.
(WebCore::toRTCIceCandidateType): Deleted.
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.h:
(WebCore::toRTCIceComponent):
(WebCore::toRTCIceProtocol):
(WebCore::toRTCIceTcpCandidateType):
(WebCore::toRTCIceCandidateType):
* Source/WebCore/platform/graphics/gstreamer/GUniquePtrGStreamer.h:

Canonical link: https://commits.webkit.org/304217@main