Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp
@@ -25,8 +25,6 @@
 #include "ExceptionOr.h"
 #include "GStreamerRegistryScanner.h"
 #include "OpenSSLCryptoUniquePtr.h"
-#include "RTCIceCandidate.h"
-#include "RTCIceProtocol.h"
 #include <cstdint>
 #include <limits>
 #include <openssl/bn.h>
@@ -45,47 +43,6 @@ GST_DEBUG_CATEGORY_STATIC(webkit_webrtc_utils_debug);
 #define GST_CAT_DEFAULT webkit_webrtc_utils_debug
 
 namespace WebCore {
-
-static inline RTCIceComponent toRTCIceComponent(int component)
-{
-    return component == 1 ? RTCIceComponent::Rtp : RTCIceComponent::Rtcp;
-}
-
-static inline std::optional<RTCIceProtocol> toRTCIceProtocol(const String& protocol)
-{
-    if (protocol.isEmpty())
-        return { };
-    if (protocol == "udp"_s)
-        return RTCIceProtocol::Udp;
-    ASSERT(protocol == "tcp"_s);
-    return RTCIceProtocol::Tcp;
-}
-
-static inline std::optional<RTCIceTcpCandidateType> toRTCIceTcpCandidateType(const String& type)
-{
-    if (type.isEmpty())
-        return { };
-    if (type == "active"_s)
-        return RTCIceTcpCandidateType::Active;
-    if (type == "passive"_s)
-        return RTCIceTcpCandidateType::Passive;
-    ASSERT(type == "so"_s);
-    return RTCIceTcpCandidateType::So;
-}
-
-static inline std::optional<RTCIceCandidateType> toRTCIceCandidateType(const String& type)
-{
-    if (type.isEmpty())
-        return { };
-    if (type == "host"_s)
-        return RTCIceCandidateType::Host;
-    if (type == "srflx"_s)
-        return RTCIceCandidateType::Srflx;
-    if (type == "prflx"_s)
-        return RTCIceCandidateType::Prflx;
-    ASSERT(type == "relay"_s);
-    return RTCIceCandidateType::Relay;
-}
 
 RefPtr<RTCError> toRTCError(GError* rtcError)
 {
